@@ -1,3 +1,7 @@
+Sat Nov 30 13:21:15 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* vm_eval.c (rb_yield_block): implement non-nil block argument.
+
 Fri Nov 29 20:59:39 2013  Masaya Tarui  <tarui@ruby-lang.org>
 
 	* vm_dump.c (rb_vmdebug_debug_print_pre): Bugfix. Get PC directly.
